--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 	text-align: center;
 	font-family: Arial Rounded MT Bold;
 	font-style: bold;
-	text-shadow: 3px 3px darkcyan;
+	text-shadow: 3px 3px #00e83a;
 	font-weight: 1000;
 }
 
